@@ -3,6 +3,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 0.07
 	Change the default for config_dirs to $HOME/.conf, $DOCUMENT_ROOT/conf, ./conf
 	In YAML files, split comma separated entries
+	Honour path as well as config_dirs
 
 0.06	Wed Apr  9 08:30:55 EDT 2025
 	Put the paths used to load the configuration file into config_path
